4/11/2013
---------------------------
- KO fixed #501 ("Merge Duplicate Points" Dialog Doesn't Find Duplicate Points)
- KO Changed the layer colors to match the colors used by Dan's build.

4/4/2013
---------------------------
- KO fixed #474 (Change zoom-on-scroll rate)
- KO fixed #497, for real this time :)
- KO fixed #500 (Can't Open More Than 1 Instance of MapRoom) on Windows

3/29/2013
---------------------------
- KO fixed #499 (MapRoom.exe Process Hangs After Crash Report Attempt)
- KO Fixed #498 (Deleting "...Tolerance for Duplicate Points" Values Crashes MapRoom)
- KO Fixed #497 (Manual Entries in "...Tolerance for Duplicate Points" Dialogs Don't Update Display)
- KO Fixed #496 (Merge Duplicate Points dialog too big) by removing static boxes
- KO Fixed #492 (Unable to Resize "Merge Duplicate Points" Window After Clicking "Find Duplicates")
- KO Fixed #452 (Need be able to identify duplicate points regardless of how different the depths are.)
- KO Fixed #367 (Duplicate point finder should support searching for duplicates without a depth tolerance)
- KO Changed Merge Duplicate Points UI to disable depth slider if depth isn't used

2/24/2013
---------------------------
- KO Changed log file deletion so that it will gracefully handle deletion failures


2/17/2013
---------------------------
- KO Changed setup.py on Windows to explicitly include .pyd files that py2exe seems not to detect

2/10/2013
---------------------------
- KO Changed the log file location to go somewhere the app always has write access to
- KO Changed setup.py to always delete the previous build first and include wx.lib.pubsub
- KO Fixed #493 (Unable to adjust "Depth Tolerance Chceck [sic] for Duplicate Points" Values)
- KO Fixed #452 (PyDeadObject errors when opening Merge Duplicate Points dialog multiple times)
- KO Fixed #482 (Hard to select a point with a line segment)

1/20/2013
---------------------------
- KO Fixed #487 (Save Image)